# gitlab-ci-pre-commit

./: .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
gitlab_ci_fmt/: __main__.py  cli.py  exceptions.py  utils.py
gitlab_ci_lint/: __main__.py  cli.py  exceptions.py  utils.py
gitlab_ci_shellcheck/: __main__.py  cli.py  exceptions.py  utils.py
scripts/: logging.sh  mypy.sh
